[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Levels/Level Components/Organism.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Levels/Level Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Levels/Level Components/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/Player/Game_Player_Turn_Icon_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Player/Game_Player_Moves_Icon_Active.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Player/Game_Player_Turn_Icon_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Font_50.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Fonts/Frick_Regular.tres" type="DynamicFont" id=9]
[ext_resource path="res://Scenes/Levels/Level Components/Grid.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/restart.svg" type="Texture" id=12]

[node name="Level 1" type="Node2D"]
position = Vector2( 0.347961, 1 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Match_Control" type="Control" parent="CanvasLayer"]
margin_left = 973.507
margin_top = 66.3202
margin_right = 1013.51
margin_bottom = 106.32
rect_scale = Vector2( 0.890607, 0.890607 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_Control" type="Control" parent="CanvasLayer/Match_Control"]
margin_right = 39.9999
margin_bottom = 40.0
rect_scale = Vector2( 0.366092, 0.366092 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_Title" type="RichTextLabel" parent="CanvasLayer/Match_Control/Time_Control"]
margin_left = -348.009
margin_top = -149.762
margin_right = 375.991
margin_bottom = 92.2376
rect_scale = Vector2( 0.947225, 0.947225 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 0
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_Text" type="RichTextLabel" parent="CanvasLayer/Match_Control/Time_Control"]
margin_left = -326.93
margin_top = 78.9552
margin_right = 397.07
margin_bottom = 320.955
rect_scale = Vector2( 2.14925, 2.14925 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 0.99, 0.8316, 0.0396, 1 )
tab_size = 0
text = "13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Match_Control/Time_Control/Time_Text"]

[node name="Moves_Control" type="Control" parent="CanvasLayer/Match_Control"]
margin_left = 3.36475
margin_top = 231.443
margin_right = 43.3647
margin_bottom = 271.443
rect_scale = Vector2( 0.366092, 0.366092 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves_Title" type="RichTextLabel" parent="CanvasLayer/Match_Control/Moves_Control"]
margin_left = -434.29
margin_top = -126.577
margin_right = 289.71
margin_bottom = 115.423
rect_scale = Vector2( 0.947225, 0.947225 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
tab_size = 0
text = "Moves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves_Container" type="HBoxContainer" parent="CanvasLayer/Match_Control/Moves_Control"]
margin_left = -680.336
margin_top = 81.4068
margin_right = 863.664
margin_bottom = 542.407
rect_scale = Vector2( 0.698945, 0.698945 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move_Icon_1" type="TextureRect" parent="CanvasLayer/Match_Control/Moves_Control/Moves_Container"]
margin_left = 258.0
margin_right = 770.0
margin_bottom = 461.0
texture = ExtResource( 5 )

[node name="Move_Icon_2" type="TextureRect" parent="CanvasLayer/Match_Control/Moves_Control/Moves_Container"]
margin_left = 774.0
margin_right = 1286.0
margin_bottom = 461.0
texture = ExtResource( 5 )

[node name="Move_Icon_3" type="TextureRect" parent="CanvasLayer/Match_Control/Moves_Control/Moves_Container"]
visible = false
margin_left = 1032.0
margin_right = 1544.0
margin_bottom = 461.0
texture = ExtResource( 5 )

[node name="Player1_Turn" type="Sprite" parent="CanvasLayer"]
position = Vector2( 600, 225.641 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Player2_Turn" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1320, 225.641 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="Players" type="Control" parent="CanvasLayer"]
margin_left = 213.088
margin_top = 621.672
margin_right = 253.088
margin_bottom = 661.672
rect_scale = Vector2( 0.407958, 0.407958 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" parent="CanvasLayer/Players" instance=ExtResource( 3 )]

[node name="Player2" parent="CanvasLayer/Players" instance=ExtResource( 3 )]
position = Vector2( 3642.88, 16.5089 )

[node name="Help" type="Button" parent="CanvasLayer"]
margin_left = 1787.81
margin_top = 1022.48
margin_right = 1917.81
margin_bottom = 1090.48
custom_fonts/font = ExtResource( 8 )
text = "Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resign" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 1739.63
margin_top = 68.0
margin_right = 1922.63
margin_bottom = 136.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "Resign"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Organism" parent="CanvasLayer/Resign" instance=ExtResource( 1 )]
position = Vector2( -1479.27, 611.255 )

[node name="Start Game" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 0.0701532
margin_top = 1012.03
margin_right = 298.07
margin_bottom = 1080.03
custom_fonts/font = ExtResource( 8 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm Resign" type="CenterContainer" parent="CanvasLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Confirm Resign"]
margin_left = 551.0
margin_top = 473.0
margin_right = 1369.0
margin_bottom = 607.0

[node name="Label" type="Label" parent="CanvasLayer/Confirm Resign/VBoxContainer"]
margin_right = 818.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 8 )
text = "Are you sure you want to resign?"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Confirm Resign/VBoxContainer"]
margin_top = 66.0
margin_right = 818.0
margin_bottom = 134.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Confirm Resign/VBoxContainer/CenterContainer"]
margin_left = 316.0
margin_right = 502.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="CanvasLayer/Confirm Resign/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 8 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="CanvasLayer/Confirm Resign/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 186.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 8 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" parent="." instance=ExtResource( 10 )]
position = Vector2( 275.516, 230 )
